Support V1 wiki folder layout (#27)
* Update Gradle and Loom

* Use enum for Docs mode

* Fix entry translations broken

* Expand nav tree on opened page entry

* Fix page title padding

* Add support for V1 wiki format

* Make ModAsset an alias of Asset

* Add support for ref page links

* Fix vanilla link text inferrence

* Add support for multi-item pages

* Add colored callout labels

* Use universal tooltip text

* Change inline code color

* Remove PrefabObtaining

Just use JEI

* Update tree when navigating links

* Get fallback title from markdown heading

* Add test mod